--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ jdk:
  
 deploy:
   provider: script
-  script: "cp .travis.settings.xml $HOME/.m2/settings.xml && mvn deploy"
+  script: "mvn test && mvn verify"
 after_success:
   - python <(curl -s https://raw.githubusercontent.com/TouK/sputnik-ci/master/sputnik-ci.py)
