--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ language: java
 
 jdk:
   - openjdk8
- 
+
+install:
+- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
 deploy:
   provider: script
   script: "mvn test && mvn verify"
