--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-language: java
+language: 
+ - java
 
 jdk:
   - openjdk8
 
-install:
-- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
 
 deploy:
   provider: script
