--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ jdk:
   - openjdk8
 
 
+script:
+ - "mvn test && mvn verify"
 
-deploy:
-  provider: script
-  script: "mvn test && mvn verify"
 after_success:
   - python <(curl -s https://raw.githubusercontent.com/TouK/sputnik-ci/master/sputnik-ci.py)
