--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ jdk:
   - openjdk8
 
 
+install: 
+ - true
+script:
+- mvn install
 
 after_success:
   - python <(curl -s https://raw.githubusercontent.com/TouK/sputnik-ci/master/sputnik-ci.py)
