--- a/pom.xml
+++ b/pom.xml
@@ -79,23 +79,40 @@
 
 	</dependencies>
 
+
+	
 	<build>
-		<plugins>
-			<plugin>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-maven-plugin</artifactId>
-      <version>2.2.5.RELEASE</version>
-			
-      <executions>
-        <execution>
-          <goals>
-            <goal>repackage</goal>
-          </goals>
-        </execution>
-      </executions>
+  <finalName>${project.artifactId}-${project.version}</finalName>
+  <sourceDirectory>src</sourceDirectory>
+  <testSourceDirectory>test</testSourceDirectory>
+  <resources>
+    <resource>
+      <directory>src</directory>
+      <excludes>
+        <exclude>**/*.java</exclude>
+      </excludes>
+    </resource>
+  </resources>
+  <testResources>
+    <testResource>
+      <directory>test</directory>
+      <excludes>
+        <exclude>**/*.java</exclude>
+      </excludes>
+    </testResource>
+  </testResources>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>${maven-compiler-plugin.version}</version>
+      <configuration>
+        <source>${maven.compiler.source}</source>
+        <target>${maven.compiler.target}</target>
+      </configuration>
     </plugin>
-		</plugins>
-		
-	</build>
+  </plugins>
+
+</build>
 
 </project>
