--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
  
  
 script:
-  # JaCoCo is used to have code coverage, "-Pcoverage" activates the maven profile in the pom.xml
+  - mvn install
   - mvn clean verify sonar:sonar -Pcoverage 
  
  cache:
